# wavtoac3encoder

./: .gitattributes  .gitignore  .gitmodules  AftenBuild.cmd  AftenClean.cmd  AftenPackages.cmd  AftenRelease.cmd  CHANGELOG.md  COPYING.TXT  Changes.md  EncWAVtoAC3.sln  EncWAVtoAC3.vcproj  EncWAVtoAC3.vcxproj  EncWAVtoAC3.vcxproj.filters  EncoderBuild.cmd  EncoderBuilds.inc  EncoderClean.cmd  EncoderPackages.cmd  EncoderRelease.cmd  EnginesClean.cmd  EnginesCopy.cmd  README.md  SetupScript.iss  SetupScriptAMD64.iss  VERSION.md  appveyor.yml  build.cake
config/: EncWAVtoAC3-x64.engines  EncWAVtoAC3.config  EncWAVtoAC3.lang  EncWAVtoAC3.presets
config/engines/: EncWAVtoAC3-x64.engines  EncWAVtoAC3-x86.engines
config/lang/: de-DE.txt  en-US.txt  ja-JP.txt  pl-PL.txt
doc/: Changes.txt  Command-Line.txt  Copying.txt  Keyboard.txt  Packages.txt  ReadMe.txt  Version.md  Version.txt
engines/: CopyToBinDirectories.cmd  copy-engines.cmd
engines/ansi/: EncWAVtoAC3.engines  EncWAVtoAC3.win32  EncWAVtoAC3.win64
engines/unicode/: EncWAVtoAC3.engines
installer/: PackageBinaries.cmd  PackageBinariesAMD64.cmd  PackageInstallers.cmd  PackageSources.cmd  README.md  SetupScript.Win32.iss  SetupScript.base  SetupScript.iss  SetupScript.version  SetupScript.x64.iss  SetupScriptAMD64.iss
lang/: de-DE.language  de.txt  en-US.language  en.txt  ja-JP.language  jp.txt  pl-PL.language  pl.txt
scripts/: .gitignore  EncoderBuild.cmd  EncoderBuilds.inc  EncoderClean.cmd  EncoderPackages.cmd  EncoderRelease.cmd  EnginesClean.cmd  EnginesCopy.cmd  Package.cmd  PackageAften.cmd  PackageBinaries.cmd  PackageBinariesAMD64.cmd  PackageInstallers.cmd  PackageSources.cmd  SetupScript.iss  SetupScriptAMD64.iss
setup/: setup.iss
src/: AboutDlg.cpp  AboutDlg.h  AftenAPI.cpp  AftenAPI.h  Avs2Raw.cpp  Avs2Raw.h  CommandLine.cpp  CommandLine.h  EncWAVtoAC3.cpp  EncWAVtoAC3.h  EncWAVtoAC3.rc  EncWAVtoAC3.vcxproj  EncWAVtoAC3.vcxproj.filters  EncWAVtoAC3AvsDlg.cpp  EncWAVtoAC3AvsDlg.h  EncWAVtoAC3Dlg-Button.cpp  EncWAVtoAC3Dlg-ComboBox.cpp  EncWAVtoAC3Dlg-Config.cpp  EncWAVtoAC3Dlg-Drop.cpp  EncWAVtoAC3Dlg-Edit.cpp  EncWAVtoAC3Dlg-Init.cpp  EncWAVtoAC3Dlg-Lang.cpp  EncWAVtoAC3Dlg-List.cpp  EncWAVtoAC3Dlg-Menu.cpp  EncWAVtoAC3Dlg.cpp  EncWAVtoAC3Dlg.h  EncWAVtoAC3EngDlg.cpp  EncWAVtoAC3EngDlg.h  EncWAVtoAC3MuxDlg.cpp  EncWAVtoAC3MuxDlg.h  EncWAVtoAC3WorkDlg.cpp  EncWAVtoAC3WorkDlg.h  EncWorkThread.cpp  EncWorkThread.h  EncoderOptions.cpp  EncoderOptions.h  Language.cpp  Language.h  MainApp.cpp  MainApp.h  (+32 more)
src/aften/: CMakeLists.txt  common.h
src/aften/CMakeModules/: CompilerSIMD.cmake  DetectCompiler.cmake  FlagsTests.cmake
src/aften/aften/: aften.c  helptext.h  opts.h
src/aften/bindings/: aftenxx.h
src/aften/bindings/cs/: AftenTypes.cs  FrameEncoder.cs  Utility.cs
src/aften/libaften/: a52.h  a52dec.h  a52enc.h  a52tab.c  aften-types.h  convert.c  convert.h  crc.c  exponent.h  mdct.c
src/aften/libaften/ppc/: mdct.h
src/aften/libaften/x86/: asm_support.h  cpu_caps.h  exponent.h  exponent_sse2.c  mdct.h  mdct_sse.c  simd_support.h
src/aften/pcm/: aiff.c  formats.c  pcm.h
src/aften/util/: wavinfo.c  wavrms.c
src/aften/vs2008-cl-DLL/: aften.vcproj
src/aften/vs2008-icl-DLL/: aften.icproj  aften.vcproj  libaften.vcproj
src/aften/windows/: benchmark_win64.cmd  build_win32_debug.cmd  build_win32_release.cmd  build_win64_debug.cmd  build_win64_release.cmd  package.cmd
src/aften/windows/help/: help_long_aften.txt  readme.txt
src/aften/windows/output/: help_long_aften.txt  readme.txt
src/aften/windows/output/aften_AMD64/: aften.exp
src/aften/windows/output/aften_AMD64_SSE3/: aften.lib
src/aften/windows/output/aften_x86/: aften.exp
src/aften/windows/output/aften_x86_SSE/: aften.lib
src/aften/windows/output/libaftendll_AMD64/: libaften.lib
src/aften/windows/output/libaftendll_AMD64_SSE3/: libaften.lib
src/aften/windows/output/libaftendll_x86/: libaften.exp
src/aften/windows/output/libaftendll_x86_SSE/: libaften.exp
src/aften/windows/output/libaftendll_x86_SSE3/: libaften.lib
src/avs/: Avs2Raw.h  AvsDec.cpp  AvsDec.vcxproj  AvsDec.vcxproj.filters
src/cli/: App.h  ArgvParser.h  EncWAVtoAC3.CLI.cpp  EncWAVtoAC3.CLI.vcxproj  EncWAVtoAC3.CLI.vcxproj.filters  main.cpp  mainapp.h  stdafx.h
src/configuration/: Config.h  Configuration.cpp  Configuration.h  EncoderOptions.cpp  EncoderOptions.h  Language.cpp  Language.h  ProgramConfig.cpp  ProgramConfig.h
src/controls/: MyButton.cpp  MyButton.h  MyComboBox.cpp  MyComboBox.h  MyComboBoxEdit.cpp  MyEdit.cpp  MyEdit.h  MyListCtrl.cpp  MyListCtrl.h  MySliderCtrl.cpp  MyStatic.cpp  MyStatic.h  ResizeDialog.cpp  ResizeDialog.h
src/core/: EncWAVtoAC3.Core.vcxproj  EncWAVtoAC3.Core.vcxproj.filters  stdafx.h
src/dialogs/: AboutDlg.cpp  AboutDlg.h  EncWAVtoAC3Dlg-Button.cpp  EncWAVtoAC3Dlg-ComboBox.cpp  EncWAVtoAC3Dlg-Config.cpp  EncWAVtoAC3Dlg-Drop.cpp  EncWAVtoAC3Dlg-Edit.cpp  EncWAVtoAC3Dlg-Init.cpp  EncWAVtoAC3Dlg-Lang.cpp  EncWAVtoAC3Dlg-List.cpp  EncWAVtoAC3Dlg-Menu.cpp  EncWAVtoAC3Dlg.cpp  EncWAVtoAC3Dlg.h  EncWAVtoAC3EngDlg.cpp  EncWAVtoAC3EngDlg.h  EncWAVtoAC3MuxDlg.cpp  EncWAVtoAC3MuxDlg.h  EncWAVtoAC3WorkDlg.cpp  EncWAVtoAC3WorkDlg.h  EnginesDlg.cpp  EnginesDlg.h  MainDlg.cpp  MainDlg.h  MuxDlg.cpp  MuxDlg.h  WorkDlg.cpp  WorkDlg.h
src/res/: EncWAVtoAC3.rc  EncWAVtoAC3.rc2  resource.h
src/utilities/: MyFile.cpp  TimeCount.h  Utilities.cpp  Utilities.h
src/worker/: AftenAPI.cpp  AftenAPI.h  Avs2Raw.cpp  Avs2Raw.h  TimeCount.cpp  TimeCount.h  WorkThread.cpp  WorkThread.h  Worker.cpp  Worker.h
tags/5.4/: AftenPackages.cmd  EncWAVtoAC3.vcxproj.filters  EncoderBuild.cmd  EncoderClean.cmd  EncoderPackages.cmd  EncoderRelease.cmd  EnginesClean.cmd  EnginesCopy.cmd
trunk/: AftenClean.cmd  AftenPackages.cmd  EncWAVtoAC3.sln  EncWAVtoAC3.vcproj  EncWAVtoAC3.vcxproj  EncWAVtoAC3.vcxproj.filters  EncWAVtoAC3_vs2010.sln  EncoderBuild.cmd  EncoderClean.cmd  EncoderPackages.cmd  EnginesClean.cmd  EnginesCopy.cmd  PackBinaries.cmd
trunk/doc/: Changes.txt  Command-Line.txt  Keyboard.txt  Packages.txt  ReadMe.txt  Version.txt
(+226 files in other folders)
